# rule110-compiler

./: .gitignore  CMakeLists.txt  README.md
src/: BlockData.hpp  BlockDetector.cpp  BlockDetector.hpp  CyclicTagSystem.cpp  CyclicTagSystem.hpp  Decoder.cpp  Decoder.hpp  GliderClassifier.cpp  GliderClassifier.hpp  HashLife1D.cpp  HashLife1D.hpp  Rule110Compiler.cpp  Rule110Compiler.hpp  Rule110Runner.cpp  Rule110Runner.hpp  TMToTag.cpp  TMToTag.hpp  TagSystem.cpp  TagSystem.hpp  TagToCyclic.cpp  TagToCyclic.hpp  TuringMachine.cpp  TuringMachine.hpp  Verifier.cpp  Verifier.hpp  main.cpp  verify_main.cpp
tools/: convert_images.py  create_analytics.py
